관리자 페이지 body 고정형 min width 설정 타이틀 관리자페이지 전체 회원, 회원 목록, 차단 회원 따로 수정 목록 내용이 없을 때 대체 이미지 함수 추가 관리자 페이지 목록 높이 통일 목록 box-shadow 추가 리스트 변경 버튼 hover:67cafe 통일 검색창 밑으로 내려서 폼이랑 위치 통일 필터를 원래 검색창 위치로 이동 관리자는 차단/받은신고 버튼 안보이게 수정 차단/받은신고/관리자지정 버튼 클릭 시 색상, hover 색상 수정 회원 신고 내역 페이지 수정 신고 상세 페이지 수정 신고 전송 페이지 수정

--- a/src/main/resources/static/css/admin/userReport.css
+++ b/src/main/resources/static/css/admin/userReport.css
@@ -1,15 +1,17 @@
 body {
+    width: 550px;
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-    /*overflow-y: hidden;*/
     display: flex;
     align-items: flex-start;
 }
-a{
+
+a {
     text-decoration: none;
     color: #1a1e21;
 }
+
 .border-thick {
     border-width: 3px; /* 원하는 두께로 설정 */
 }
@@ -25,19 +27,19 @@ header {
 
 .popup {
     padding: 20px;
-    margin-top: 0px;
+    margin-top: 0;
     box-sizing: border-box; /* 패딩 포함 너비 계산 */
 }
 
 .header-top {
+    width: 500px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.header-top .log img {
-    width: 65px;
-    height: 52px;
+.reportTitle {
+    color: #67cafe;
 }
 
 .border {
@@ -65,7 +67,7 @@ header {
     align-items: center;
     justify-content: center;
     text-align: center;
-
+    min-height: 300px;
     min-width: 200px; /* 최소 너비 200px 설정 */
 }
 
@@ -81,3 +83,25 @@ header {
     color: #6c757d;
 }
 
+.postBadge {
+    background-color: #e5ffee;
+    color: black;
+    padding: 5px;
+    border-radius: 3px;
+}
+
+.replyBadge {
+    background-color: gray;
+    color: white;
+    padding: 5px;
+    border-radius: 3px;
+}
+
+.reportDetail {
+    max-width: 220px;
+    cursor: pointer;
+}
+
+.regDate {
+    font-size: x-small;
+}
