--- a/src/main/resources/static/css/admin/adminList.css
+++ b/src/main/resources/static/css/admin/adminList.css
@@ -1,3 +1,11 @@
+body {
+    min-width: 1080px;
+}
+
+.userMenu {
+    width: 75%;
+}
+
 a:hover {
     font-weight: bold;
 }
@@ -22,6 +30,23 @@ a:hover {
     color: #fff; /* 활성화된 버튼 텍스트 색상 */
 }
 
+.container,
+.container > div {
+    width: 960px;
+}
+
+h2, h6 {
+    color: #67cafe;
+}
+
+h6 {
+    font-size: 15px;
+}
+
+h2 {
+    font-size: 33px;
+}
+
 .adminTitle {
     margin-bottom: 4rem;
 }
@@ -39,14 +64,40 @@ a:hover {
     height: 25px;
 }
 
+.searchUser {
+    width: 50%;
+}
+
+.searchUserInput {
+    border-radius: 15px 0 0 15px;
+    border: 1px solid #67cafe;
+    border-right: none;
+}
+
+.searchBtn {
+    width: 15%;
+    border-radius: 0 15px 15px 0;
+    border: 1px solid #67cafe;
+    border-left: none;
+    color: #000;
+    background-color: #E8FFFF;
+}
+
 .user-list {
     background-color: #E8FFFF;
     border: 1px solid #d5d5d5;
     border-radius: 0.5rem 0 0 0.5rem;
+    color: gray;
     height: 43px;
     padding: 10px;
     align-items: center;
     width: 40%;
+    text-decoration: none;
+}
+
+.user-list:hover {
+    background-color: #67cafe;
+    color: white;
 }
 
 .user-list-active {
@@ -58,6 +109,11 @@ a:hover {
     align-items: center;
     color: white;
     width: 40%;
+    text-decoration: none;
+}
+
+.user-list-active:hover {
+    color: white;
 }
 
 .report-list {
@@ -65,10 +121,17 @@ a:hover {
     border: 1px solid #d5d5d5;
     border-left: white;
     border-radius: 0;
+    color: gray;
     height: 43px;
     padding: 10px;
     align-items: center;
     width: 40%;
+    text-decoration: none;
+}
+
+.report-list:hover {
+    background-color: #67cafe;
+    color: white;
 }
 
 .report-list-active {
@@ -81,6 +144,11 @@ a:hover {
     align-items: center;
     color: white;
     width: 40%;
+    text-decoration: none;
+}
+
+.report-list-active:hover {
+    color: white;
 }
 
 .block-list {
@@ -92,6 +160,13 @@ a:hover {
     padding: 10px;
     align-items: center;
     width: 40%;
+    color: gray;
+    text-decoration: none;
+}
+
+.block-list:hover {
+    background-color: #67cafe;
+    color: white;
 }
 
 .block-list-active {
@@ -104,48 +179,143 @@ a:hover {
     align-items: center;
     color: white;
     width: 40%;
+    text-decoration: none;
 }
 
-.administratiorBtn {
+.block-list-active:hover {
+    color: white;
+}
+
+.list-group {
+    box-shadow: 1px 1px 3px #dee2e6;
+}
+
+.userArrayBtn {
+    width: 25%;
+    background-color: #67cafe;
+    color: #fff;
+    border: 1px solid #d5d5d5;
+    border-radius: 0.5rem;
+}
+
+#viewStyleForm {
+    width: 20%;
+}
+
+#viewStyleForm > div {
+    height: 43px;
+}
+
+#viewStyle {
+    width: 75%;
+}
+
+.list-group-item > div {
+    height: 120px;
+}
+
+.administratorBtn {
     color: #fff;
     background-color: #67cafe;
     border: 1px solid #67cafe;
     --bs-btn-hover-color: #fff;
     --bs-btn-hover-bg: #6610f2;
-    font-size: 1rem;
+    font-size: 12px;
     padding: 0.5rem;
     width: 100px;
-    height: 40px;
-
+    height: 30px;
 }
 
 .blockUserBtn {
     color: #fff;
     background-color: #67cafe;
     border: 1px solid #67cafe;
-    --bs-btn-hover-color: #fff;
-    --bs-btn-hover-bg: red;
+    border-radius: 0.5rem;
     font-size: 1rem;
     padding: 0.5rem;
     width: 100px;
     height: 40px;
+}
 
+.blockUserBtn:hover {
+    background-color: red;
+    border-color: red;
 }
 
 .reportDetailBtn {
     color: #fff;
     background-color: #67cafe;
     border: 1px solid #67cafe;
-    --bs-btn-hover-color: #fff;
-    --bs-btn-hover-bg: chartreuse;
+    border-radius: 0.5rem;
     font-size: 1rem;
     padding: 0.5rem;
     width: 100px;
     height: 40px;
 }
 
-.Admin {
-    font-size: large;
-    color: red;
+.reportDetailBtn:hover {
+    background-color: #ffc107;
+    border-color: #ffc107;
 }
 
+.reportList > a {
+    cursor: pointer;
+    color: inherit;
+    text-decoration: none;
+    font-size: large;
+}
+
+.reportType {
+    background-color:#67cafe;
+    color: white;
+    padding: 2px 6px;
+    border-radius: 3px;
+}
+
+.reporter {
+    margin-top: 15px;
+}
+
+.adminCheck {
+    font-size: 17px;
+    color: #0027f4;
+}
+
+.unblockUserBtn {
+    color: white;
+    background-color: #67cafe;
+    border: 1px solid #67cafe;
+    border-radius: 0.5rem;
+    font-size: 1rem;
+    padding: 0.5rem;
+    width: 100px;
+    height: 40px;
+}
+
+.unblockUserBtn:hover {
+    background-color: #00af00;
+    border-color: #00af00;
+    color: white;
+}
+
+.noSearch {
+    width: 960px;
+    height: 600px;
+    border: 1px solid #d5d5d5;
+    border-radius: 0.35rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.noSearchContent {
+    text-align: center;
+}
+
+.noSearch img {
+    height: 300px;
+}
+
+.noSearch > div {
+    color: gray;
+}
